web/assets/scss/components/_search.scss
#search-modal {
  @include hardware-acceleration;
  top: 0;
  right: 0;
  bottom: 0;
  opacity: 0;
  z-index: 10001;
  left: 80px;
  position: fixed;
  background: #fff;
  background: $white;
  transform: translateX(100%);
  transition: transform 0.3s $ease, opacity 0.3s $ease;

  // 320–480px get smaller left gap
  @include max-screen($breakpoint-sm) {
    left: 60px;
  }

  .scroll-wrap {
    overflow-y: auto;
    max-height: 100%;
    padding: $padding 0;

    @include media-md {
      padding: 3*$padding 0;
    }
    // @include media-lg {
    //   padding: 3*$padding-lg 0;
    // }
  }

  @include media-lg {
    left: $sidebar-max-width;
  }

  &.active {
    opacity: 1;
    transform: none;

    .icon-x {
      opacity: 1;
      transition: opacity 0s 0.3s;
    }
  }

  .icon-x {
    opacity: 0;
    top: $padding;
    width: 18px;
    height: 18px;
    fill: $off-white;
    position: absolute;
    pointer-events: none;
    right: calc(100% + #{$padding-sm});

    // 320–480px get smaller left gap
    @include max-screen($breakpoint-sm) {
      right: calc(100% + 20px);
    }

    @include media-lg {
      width: 24px;
      height: 24px;
      top: 127px;
      right: calc(100% + #{$padding});
    }
  }
}

.search-open {
  @include font-buttons;

  .icon-search {
    top: 2px;
    fill: $black;
    width: 10.5px;
    height: 10.5px;
    margin-left: 12px;
    position: relative;
  }

  // Slightly larger search icon on 480–960px
  @include screen($breakpoint-sm, $breakpoint-md) {
    .icon-search {
      width: 13px;
      height: 13px;
    }
  }
  @include media-md {
    margin-right: 12px;
  }
}

.search-form {
  padding: 0 $padding;
  input[type="search"] {
    @include font-h1;
    border: 0;
    border: none;
    color: $black;
    outline: none;
    display: block;
    appearance: none;
    background: transparent;
  }
  .button {
    margin-top: $padding;
  }

  @include media-lg {
    padding: 0 $padding-lg;
    .button {
      margin-top: $padding-lg;
    }
  }
}

::placeholder {
  color: $concrete-light;
}

.search-results {
  @include font-details;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  overflow-x: hidden;

  // @include media-md {
  //   margin-top: 12*$beat;
  // }

  h2 {
    @include font-details;
    margin: 0;
    padding-bottom: 13px;
    border-bottom: 1px solid $black;
  }

  .search-section {
    width: 100%;
    flex: 0 0 0;
    flex-basis: 100%;
    position: relative;
    padding: 0 $padding;
    margin-top: $padding*2;

    &:first-of-type {
      padding-top: 0;
    }

    @include min-screen(500px) {
      max-width: 50%;
      flex-basis: 50%;

      &:nth-of-type(2) {
        padding-top: 0;
      }
    }

    @include media-md {
      padding-top: 0;
      max-width: 25%;
      flex-basis: 25%;
    }
    @include media-lg {
      padding: 0 $padding-lg;
      margin-top: $padding-lg*2;
    }

    &::after {
      top: 0;
      bottom: 0;
      width: 1px;
      content: '';
      right: -1px;
      position: absolute;
      background: $off-white;
    }

    .search-section-title {
      @include hardware-acceleration;
      top: 0;
      z-index: 1;
      width: 100%;
      position: relative;
      background: $white;
      padding: 2*$beat 0 0;

      &.stuck {
        position: fixed;
      }
      h2 {
        display: inline-block;
      }
    }
  }

  .no-results {
    @include font-p;
    margin: 0;
    color: red;
    padding: 0 $padding;

    @include media-lg {
      padding: 0 $padding-lg;
    }
  }

  .search-article {
    padding: 35px 0 $padding;
    border-bottom: 1px solid $off-white;

    @include media-lg {
      padding: 51px 0 $padding-lg;
    }

    h3 {
      @include font-p;
      @include no-underline;
      color: $red;
      margin: 0 0 2*$beat;
    }

    p {
      margin: 0;
    }

    .read-more {
      display: block;
      margin: 2*$beat 0 0;
    }

    .arrow-wrap {
      position: relative;
      text-decoration: underline;
      &:after {
        content: "\00a0\00a0"; // extend the underline
      }
    }

    .icon-right-arrow {
      top: 5px;
      right: 0;
      fill: $black;
      width: 8.5px;
      height: 6.5px;
      position: absolute;
    }
  }
}

